the_project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-app-svc
spec:
  type: ClusterIP
  selector:
    app: project-app # This is the app as declared in the deployment.
  ports:
    - name: http
      protocol: TCP
      port: 1234
      targetPort: 9090
